--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
           cache: 'pip'
       -
         name: Installing build dependencies
-        run: pip install -r requirements.txt
+        run: pip install pre-commit
       -
         name: Setup pre-commit
         run: pre-commit install
