--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,8 @@ jobs:
       -
         name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       -
         name: Setup Python
         uses: actions/setup-python@v2
