--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,7 @@ jobs:
         name: Checkout repository
         uses: actions/checkout@v2
         with:
-          submodules: recursive
+          submodules: true
       -
         name: Setup Python
         uses: actions/setup-python@v2
